# comfyui-universal-asset-downloader

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish-comfyui-registry.yml
js/: downloader.js
nodes/: base_downloader.py  download_utils.py  universal_downloader.py
workflows/: Flux Kontext Image Stitch.json  README.txt  SDXL with Lora Workflow.json  WAN 2.1 Text To Image.json  WAN 2.1 Text To Video.json  WAN 2.2 14B (GGUF) V2V.json  WAN 2.2 I2V (Fast).json  Wan 2.2 T2V (Fast) .json
